--- a/packages/astro-file-icon/package.json
+++ b/packages/astro-file-icon/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astro-file-icon",
   "description": "Astro component that makes it easy to render themeable svg file icons.",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "type": "module",
   "exports": {
     ".": "./index.ts"
@@ -38,7 +38,7 @@
     "astro": "^3.2.0"
   },
   "peerDependencies": {
-    "astro": "^2.0.0-beta.0"
+    "astro": "^3.0.0"
   },
   "dependencies": {
     "colord": "^2.9.3",
