--- a/packages/astro-file-icon/package.json
+++ b/packages/astro-file-icon/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astro-file-icon",
   "description": "Astro component that makes it easy to render themeable svg file icons.",
-  "version": "0.3.1",
+  "version": "1.5.0",
   "type": "module",
   "exports": {
     ".": "./index.ts"
@@ -34,14 +34,13 @@
   "license": "MIT",
   "scripts": {},
   "devDependencies": {
-    "@types/lodash.uniqueid": "^4.0.7",
-    "astro": "^3.2.0"
+    "astro": "^4.11.3"
   },
   "peerDependencies": {
-    "astro": "^3.0.0"
+    "astro": "^3.0.0 || ^4.0.0"
   },
   "dependencies": {
-    "colord": "^2.9.3",
-    "lodash.uniqueid": "^4.0.1"
-  }
+    "colord": "^2.9.3"
+  },
+  "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
