--- a/demo/package.json
+++ b/demo/package.json
@@ -11,10 +11,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.11.3",
+    "@tailwindcss/vite": "^4.0.3",
+    "astro": "^5.2.4",
     "astro-file-icon": "workspace:^",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^4.0.3"
   },
   "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
