--- a/packages/astro-file-icon/package.json
+++ b/packages/astro-file-icon/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astro-file-icon",
   "description": "Astro component that makes it easy to render themeable svg file icons.",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "type": "module",
   "exports": {
     ".": "./index.ts"
@@ -34,10 +34,10 @@
   "license": "MIT",
   "scripts": {},
   "devDependencies": {
-    "astro": "^4.11.3"
+    "astro": "^5.0.0"
   },
   "peerDependencies": {
-    "astro": "^3.0.0 || ^4.0.0"
+    "astro": "^3.0.0 || ^4.0.0 || ^5.0.0"
   },
   "dependencies": {
     "colord": "^2.9.3"
